--- a/views/pic/3dmodel.hbs
+++ b/views/pic/3dmodel.hbs
@@ -14,7 +14,7 @@
              <div class="col-10 col-sm-10" style="text-align: center;">
                 <h1 class="word">Upload Pics</h1></div>
                 <div class="col-2 col-sm-2">
-                 <a href="/ind1/dashboard1" class="btn btn-primary">Back</a>
+                 <a href="/base" class="btn btn-primary">Back</a>
                  </div></nav>
         <div class="container">
              <div class="row row-content">   
