--- a/css/styles.css
+++ b/css/styles.css
@@ -177,11 +177,11 @@ body {
   }
   
   
-  .card2 {
+  .card1 {
     box-shadow: 0 14px 10px 0 rgba(0, 0, 0, 0.2);
-    background-color:slateblue;
-    width: auto;
-    height: 200px;
+    background-color:wheat;
+    width: 300px;
+    height: 350px;
  
   margin-bottom: 16px;
   padding: 20 20px;
