--- a/views/mycart/mycart.hbs
+++ b/views/mycart/mycart.hbs
@@ -127,7 +127,7 @@ input[type=number]::-webkit-outer-spin-button {
 <table><div class="row row-content"> 
     <div class="col-sm-3"> </div>
     <div class="col-12 col-sm-6"><br><br>
-<div class="card">
+<div class="card1">
   <a href="/base"><img src="cart3.png" style="width:100%">
   <p>
       <B><I><h3>Your Cart is empty!</h3></I></B></p><p>
