--- a/views/base/3dm.hbs
+++ b/views/base/3dm.hbs
@@ -60,7 +60,7 @@
 }
     </style>
 </head>
-<title>Book Depot</title><link rel = "icon" href ="/icon.PNG" style="width:200px;" type = "image/x-icon"> 
+<title>Book Depot</title><link rel = "icon" href ="icon.png" style="width:300px;" type = "image/x-icon"> 
 <body>
 <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
 <div class="container">
@@ -95,6 +95,7 @@
         <header class="jumbotron" style="background-image: url(bok.jpg);background-size: 1520px;background-repeat: no-repeat;">
         <div class="container">
             <div class="row row-header">
+              <img src="icon1.png" style="width: 100px;" class="img-fluid">
                 <div class="col-12 col-sm-6">
                   <h1>Book Depot</h1>
                 </div>
