--- a/views/base/3dm.hbs
+++ b/views/base/3dm.hbs
@@ -60,7 +60,7 @@
 }
     </style>
 </head>
-<title>Book Depot</title><link rel = "icon" href ="icon.png" style="width:300px;" type = "image/x-icon"> 
+<title>Book Depot</title><link rel = "icon" href ="/icon.png" style="width:300px;" type = "image/x-icon"> 
 <body>
 <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
 <div class="container">
@@ -94,14 +94,9 @@
 
         <header class="jumbotron" style="background-image: url(bok.jpg);background-size: 1520px;background-repeat: no-repeat;">
         <div class="container">
-            <div class="row row-header">
-              <img src="icon1.png" style="width: 100px;" class="img-fluid">
-                <div class="col-12 col-sm-6">
-                  <h1>Book Depot</h1>
-                </div>
-                <div class="col-12 col-sm align-self-center">
-                    <!-- <img src="img/logo.png" class="img-fluid">-->
-                </div>
+           <div class="row row-header">
+                <h1> <img src="icon1.png" style="width: 40px;" class="img-fluid"> Book Depot</h1>
+            
             </div>
         </div>
     </header>
@@ -193,7 +188,7 @@
                 </div>
                 <div class="col-3 col-sm-4">
                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15138.960731624524!2d73.8675033!3d18.4501022!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb75eebf3233ba776!2sSwitchPay%20Solutions%20Pvt.Ltd!5e0!3m2!1sen!2sin!4v1609403443575!5m2!1sen!2sin" 
-  width="400" height="150" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+  width="380" height="150" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
                     
            </div>
