--- a/views/base/3dm.hbs
+++ b/views/base/3dm.hbs
@@ -166,17 +166,20 @@
     {{/each}}</div></tr>
 </table> 
  </div>
-   <footer class="footer" style="background-image: url(wall3.jpg);background-size: 1520px;background-repeat: no-repeat;">
+   <footer class="footer" style="background-image: url(wall3.jpg);background-size:1520px;background-repeat: no-repeat;">
         <div class="container">
             <div class="row">             
-                <div class="col-3 offset-1 col-sm-2">
+                <div class="col-4 offset-1 col-sm-2">
                     <h5 style="color: beige;">Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="/base">Books</a></li>
+                    <ul class="list-unstyled" >
+                        <li><a style="color: beige;" href="index.html">Home</a></li>
+                        <li><a style="color: beige;" href="/base">Books</a></li>
+                        <li> <a href="pp.html" style="color: beige;" >Privacy Policy</a>  </li> 
+                            <li> <a href="rp.html" style="color: beige;" >Refund Policy</a>  </li> 
+                            <li> <a href="tc.html" style="color: beige;" >Terms & Conditions</a>  </li> 
                     </ul>
                 </div>
-                <div class="col-6 col-sm-5">
+                <div class="col-7 col-sm-5">
                     
                     <address><h5 style="color: white;">Our Address&nbsp;<img src="add.png" style="width: 20px;"></h5>
                     SwitchPay Solutions Pvt.Ltd, D-4 802, Lake Town CHS,Bibwewadi-Katraj Road,Katraj Pune-411046<br>
@@ -188,17 +191,13 @@
                 </div>
                 <div class="col-3 col-sm-4">
                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15138.960731624524!2d73.8675033!3d18.4501022!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb75eebf3233ba776!2sSwitchPay%20Solutions%20Pvt.Ltd!5e0!3m2!1sen!2sin!4v1609403443575!5m2!1sen!2sin" 
-  width="200" height="150" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+  width="200px;" height="150" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
                     
            </div>
 
-           <div class="row">     <div class="col-4 col-sm-5">&nbsp;</div>
-           <div style="color: white;" class="col-8 col-sm-7">  
-            <br>
-               <a href="pp.html" >Privacy Policy</a>   
-            </div></div><div class="row"><div class="col-sm-4">&nbsp;</div>
-            <div style="color: white;"class="col-12 col-sm-8">             
+          <div class="row"><div class="col-2 col-sm-4">&nbsp;</div>
+            <div style="color: white;"class="col-10 col-sm-8">             
                 
                    © Copyright 2020 SwitchPay Solutions Pvt.Ltd
                 
