--- a/views/pic/3dmodel.hbs
+++ b/views/pic/3dmodel.hbs
@@ -34,7 +34,7 @@
             <label for="name">Image Title</label> 
             </div> 
             <div class="col-sm-6">
-            <input type="text" id="name" class="form-control" placeholder="Title" maxlength="16"
+            <input type="text" id="name" class="form-control" placeholder="Title" 
                    value="" name="name" title="Please enter a caption for your model" required>  
                    </div> </div> 
                    
