--- a/views/checkout/checkout.hbs
+++ b/views/checkout/checkout.hbs
@@ -57,10 +57,11 @@ var i=0; var j=0; </script>
     
 
      
-   </div>
+   </div><h3 style="color:crimson;"><I>Unfortunately we cannot process online payments right now! </I></h3>
+      <h3 style="color:green;"><I>Proceed with cash on delivery?</I></h3><br><br>
 <form method="post" action="/icart1/place">
-<button class="btn btn-success" type="submit" style="width: 100%; display: block;">Place Order
-   <img src="https://model3ddd.herokuapp.com/pla.png" style="width: 30px;"></button></form>
+<button class="btn btn-success" type="submit" style="width: 100%; display: block;"><h4>Place Order
+   <img src="https://model3ddd.herokuapp.com/pla.png" style="width: 70px;"></h4></button></form>
 </div>
 </body> <!--
  <script src="http://localhost:3000/jquery/dist/jquery.slim.min.js"></script>
