--- a/views/base/3dm.hbs
+++ b/views/base/3dm.hbs
@@ -159,7 +159,7 @@
      <h6 class="card-title" id="mname" style="width: 100%; height:20%;   overflow-y:auto; ">{{#each this}}{{this.name}}{{/each}}</h5> 
      
      <div class="cost" style="width: 150;"><span class="badge badge-warning" style="width:100%;font-size:medium; ">Rs.{{#each this}}{{this.price}}{{/each}}/-</span> </div>
-      <p></p><a {{#each this}}href="/cart1/{{this._id}}"{{/each}} class="btn btn-info btn-sm" style="width: 100%; background:darkcyan; ">
+      <p></p><a {{#each this}}href="/cart1/{{this._id}}"{{/each}} class="btn btn-info btn-sm" style="width: 100%; background:mediumpurple; ">
         <i class="fa fa-shopping-cart"></i> Add to Cart</a> 
          </p>  
             </div>
