--- a/css/styles.css
+++ b/css/styles.css
@@ -231,7 +231,7 @@ body {
     .card {
       box-shadow: 0 14px 10px 0 rgba(0, 0, 0, 0.2);
       background-color:rgb(255,255,255);
-      width: 200px;
+      width: 100%;
       height: 350px;
    
     margin-bottom: 16px;
