--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,10 @@ body {
   border-spacing: 10px;
   }
   
-  
+  .card img {
+    width: 100%;
+    height: 200px;
+  }
   .card1 {
     box-shadow: 0 14px 10px 0 rgba(0, 0, 0, 0.2);
     background-color:wheat;
@@ -241,6 +244,7 @@ body {
     }
     .card img {
       width: 100%;
+      height: 350px;
     }
     .modal{
     width: 88%;    
